# ez-aventurier

./: .env.dev  .env.prod  .gitignore  Caddyfile.dev  Caddyfile.prod  Makefile  deploy.sh  docker-compose.yaml  readme.md  todo.md
client/: index.html  style.css
client_rust/: .gitignore  Cargo.toml  Dioxus.toml
client_rust/assets/styling/: main.css
client_rust/src/: main.rs
client_rust/src/components/: admin.rs  admin_body.rs  button.rs  cache_list.rs  connected_user.rs  connection_form.rs  create_new_cache.rs  hero.rs  info_card.rs  input.rs  message_card.rs  mod.rs  user_body.rs  user_header.rs  user_profile.rs
client_rust/src/components/admin/: admin.rs  admin_body.rs  create_new_cache.css  create_new_cache.rs  mod.rs
client_rust/src/components/alert_dialog/: component.rs  mod.rs
client_rust/src/components/button/: button.rs  mod.rs
client_rust/src/components/cache_detail/: cache_detail.css  cache_detail.rs  camp_letter.rs  mod.rs
client_rust/src/components/user/: mod.rs  user.rs  user_body.rs  user_header.rs
client_rust/src/service/: client_context.rs  mod.rs
client_rust/src/views/: admin.rs  cache_detail.rs  cache_detail_view.rs  cache_list.rs  cache_list_view.rs  home.rs  home_view.rs  leaderboard.rs  leaderboard_view.rs  mod.rs  navbar.rs  user.rs  user_view.rs
client_rust/src/views/cache_detail_view/: cache_detail_view.css  cache_detail_view.rs  mod.rs
client_rust/src/views/leaderboard/: leaderboard.css  leaderboard.rs  mod.rs
server/: .air.toml  Dockerfile  go.mod  main.go  package-lock.json  package.json  readme.md  tsconfig.json
(+67 files in other folders)
