[package]
name = "client_rust"
version = "0.1.0"
authors = ["YaNaRion <druet.goldorak@gmail.com>"]
edition = "2021"

[dependencies]
dioxus = { version = "0.7.1", features = ["router"] }
web-sys = { version = "0.3", features = [
    "console", 
    "File", 
    "HtmlInputElement",  # Add this
    "HtmlElement",       # Add this
] }
dioxus-logger = "0.5"
log = "0.4"
reqwest = { version = "0.13.2", features = ["json", "multipart"] }  # Add multipart feature
serde = { version = "1.0.228", features = ["derive"] }
dioxus-popup = "0.1"
dioxus-primitives = { git = "https://github.com/DioxusLabs/components", version = "0.0.1", default-features = false }

# Add these for file handling
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
